roles/kubernetes/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: lab11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: my-deployment
          image: "registry.hpc.ut.ee/sysadmincourse-dev/hello-world:1.0"
          ports:
            - containerPort: 5000
          imagePullPolicy: Never
