roles/kubernetes/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: lab11
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 80
      protocol: TCP
  selector:
    app: my-deployment
